Some rename and refactoring in in `ConcurrentAsyncEnumerator`
* The `TaskCompletionSource.TrySetResult` invocation in `Signalable.Signal()`
   has been changed to be called asynchronously to avoid deadlocking if any continuation
   execute a synchronous wait.
   This fix the test `ObservablesShouldBeConvertible` for which the result was not deterministic
   and end up in deadlock a call to `Task.Delay()` was not inserted before the first call
   to `observerOnNext()`.
* Removed the try/catch in `ConcurrentAsyncEnumerator.MoveNext()` that is no longer necessary.
* Handle partial enumeration correctly in `ConcurrentAsyncEnumerator.Yield(T value)`.
  This ensure also that infinite sequences do not leave live instances around.
* Properly handle exceptions propagation in methods that use the enumerators directly to avoid swallowing exceptions if an exception is thrown during enumeration and the Dispose method throw again in the finally body (see AsyncEnumerable.DisposeAsync implementations)

--- a/Source/ALinq.Tests/ALinq.Tests.csproj
+++ b/Source/ALinq.Tests/ALinq.Tests.csproj
@@ -17,6 +17,8 @@
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,6 +66,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AsyncEnumerableAllTests.cs" />
+    <Compile Include="AsyncEnumerableTests.cs" />
     <Compile Include="AsyncEnumerableAnyTests.cs" />
     <Compile Include="AsyncEnumerableAverageTests.cs" />
     <Compile Include="AsyncEnumerableCreateTests.cs" />
