--- a/Source/ALinq.Tests/packages.config
+++ b/Source/ALinq.Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="Rx-Linq" version="2.0.20823" targetFramework="net45" />
   <package id="Rx-Main" version="2.0.20823" targetFramework="net45" />
   <package id="Rx-PlatformServices" version="2.0.20823" targetFramework="net45" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net45" />
 </packages>
